# predictorgateway

./: Dockerfile  How to run.txt  Makefile  README.md  config.py  gateway.py  lastgramusikdeeplearning.odt  loggingmodule.py  pyproject.toml  requirements.txt  run.py  setup_env.sh
app/: __init__.py  config.py  gateway.py  routes.py
tests/: test_routes.py
