[tool.poetry]
name = "predictor-gateway"
version = "0.1.0"
description = "A Flask project with Docker, Gunicorn, and testing setup"
authors = ["Gunjan Jamuar <gunjanjamuar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "2.3.2"
Gunicorn = "21.1.0"
requests = "^2.32.3"
jsonify = "^0.5"
werkzeug = "3.0.6"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"